Fix for certificate password dialog spacing.
BUG=123828
TEST=see ticket


Review URL: http://codereview.chromium.org/10091047

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@132648 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 1c36e0267ee1bd0e209e37d0da30e285755b65e4

--- a/chrome/browser/resources/options2/certificate_manager.css
+++ b/chrome/browser/resources/options2/certificate_manager.css
@@ -6,6 +6,12 @@
   min-width: 700px;
 }
 
+#certificateRestoreOverlay h1 {
+  /* Leave enough space for the close-button. */
+  /* TODO(KGR): make dialogs to use flex-boxes instead of relying on padding. */
+  padding-right: 35px;
+}
+
 .certificate-tree-table {
   width: 100%;
 }
